--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -16,6 +16,7 @@
     "andys8.jest-snippets",
     "eg2.vscode-npm-script",
     "christian-kohler.npm-intellisense",
-    "christian-kohler.path-intellisense"
+    "christian-kohler.path-intellisense",
+    "esbenp.prettier-vscode"
   ]
 }
