--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "eslint": "^7.27.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "test": "jest --watch"
